--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "db-seed": "NODE_ENV=development prisma db seed"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.4.0",
@@ -20,12 +24,15 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@types/jsdom": "^21.1.6",
+    "jsdom": "^24.0.0",
     "next": "^14.2.1",
     "next-auth": "^4.24.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "use-debounce": "^10.0.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
@@ -42,6 +49,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^5.10.2",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.7.2",
     "typescript": "^5.4.2"
   },
   "ct3aMetadata": {
